--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     ],
     "require": {
         "php": ">=7.1.3",
-        "guzzlehttp/guzzle": ">=6.4"
+        "guzzlehttp/guzzle": ">=6.4",
+        "seffeng/arr-helper": "^0.1.3"
     },
     "require-dev": {
         "phpunit/phpunit": ">=8.0"
